<resources>
    <string name="app_name">MyEarth</string>
    <string name="navigator_text_1">Endecke den Schwarzwald auf spielerische Weise und trage gleichzeitig zum Umweldschutz bei!</string>
    <string name="navigator_text_2">Bei unserer Schnitzeljagd besuchst du 5 Stationen im Schwarzwald, löst Quizfragen und Aufgaben zum Thema Biodiversität und Umweltschutz und sammelst Punkte. Mit genug Punkten gewinnst du ein Freibier!</string>
    <string name="navigator_text_3">Also, worauf wartest du?</string>
    <string name="first_station_text_1">Willkommen bei der ersten Station. Zu Anfang beginnen wir mit einer kleinen Stärkung. Aber nicht für uns, sondern für die vielen Vögel im Schwarzwald.</string>
    <string name="first_station_text_2">Zu deiner Rechten befinden sich 5 Wasserschalen (stehen und hängen an Bäumen), welche als Vogelbäder funktionieren. Auf dem Boden findest du zudem 5 kleine Schalen, wo Insekten Trinken finden können.</string>
    <string name="first_station_text_3">Da stehendes Wasser schnell gefährlich werden kann, ist es wichtig die Schale oft mit neuen Wasser zu versorgen. Tausche mit Hilfe des Brunnens (links von dir) einmal das Wasser in allen Schalen.</string>
    <string name="first_station_text_4">Du erhälst 50 Punkte dafür!</string>
    <string name="second_station_text_1">Am Haus des Försters findet du Eimer, Müllzangen und eine Waage. Schnapp dir einen Eimer und eine Müllzange und ab in den Wald! Für 700g Müll bekommst du 500 Punkte gutgeschrieben.</string>
    <string name="second_station_text_2">Die Punkte bekommst du, wenn du den Eimer auf die Waage am Försterhaus stellst (eine Kamera dient als Antischummelschutz) und den unteren Button klickst. Dein Punktekonto wird automatisch angepasst!</string>
    <string name="second_station_text_3">Denke danach daran, den Müll in die dafür vorgesehenen Container zu entsorgen.</string>
    <string name="third_station_text_1">Der Schwarzwald ist voller verschiedener Tierarten. Vielleicht ist dir das vorhin schon beim Wassertauschen aufgefallen, aber es gibt vor allem sehr viele Vogelarten. Entdecke die unterschiedlichen Arten hier.</string>
    <string name="third_station_text_2">Für jede fotografierte Vogelart bekommst du 50 Punkte</string>
    <string name="fourth_station_text">Du hast dir eine kleine Pause verdient. Setz dich auf eine Bank, genieße die Aussicht und nimm an dem folgenden Quiz teil. Jede reichtige Antwort bringt dir 50 Punkte! </string>
    <string name="navigator_headline_1">LET\'S CREATE SOME</string>
    <string name="navigator_headline_2">CHANGE!</string>
    <string name="fith_station_text_2">Erhalte 100 Punkte nach beendigen der Aufgabe</string>
    <string name="fith_station_text_1">Helfe den Tieren im Schwarzwald, indem du einen kleinen Rückzugsbereich für kleinere Tiere baust. Das geht ganz einfach. Sammle ein wenig Laub und kleine Stöcke und häufe sie in einem Bereich im Wald zu einem kleinen Haufen.</string>
    <string name="motivation_text_1">Für 2.000 Punkte erwartet dich eine tolle Belohnung für deine Mühe! Am letzten Gasthof kannst du deine Punkte dann gegen ein Freibier (oder alkoholfreies Getränk deiner Wahl) eintauschen!</string>
    <string name="motivation_text_2">Lade deine Freunde ein mitzumachen!</string>
    <string name="motivation_text_3">So könnt ihr euch gegenseitig motivieren Punkte zu sammeln und gemeinsam den Schwarzwald erkunden.</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>