<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".FirstStation"
android:background="@color/lightgreen"
android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="0dp">

        <ImageView
            android:id="@+id/img_station_1"
            android:layout_width="400dp"
            android:layout_height="300dp"
            android:gravity="top"
            android:padding="0dp"
            android:src="@drawable/station1" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="STATION 1: WALDECK"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="Vogelbad"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/first_station_text_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/first_station_text_2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/first_station_text_3"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start">

            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_station_text_4"
                android:paddingLeft="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginTop="5dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/water_changed"
            android:layout_width="351dp"
            android:layout_height="62dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/orange"
            android:text="Wasser getauscht!" />

        <ImageButton
            android:id="@+id/button_back"
            android:layout_gravity="start"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/lightgreen"
            android:scaleType="fitCenter"
            android:src="@drawable/back"
            android:padding="10dp" />

    </LinearLayout>

</ScrollView>