<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".SecondStation"
android:background="@color/lightgreen"
android:padding="20dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="0dp">

    <ImageView
        android:id="@+id/img_station_1"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:gravity="top"
        android:padding="0dp"
        android:src="@drawable/station2" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="STATION 2: ESCHECK"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="Müllsammeln"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/second_station_text_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/second_station_text_2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start">

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_station_text_3"
            android:paddingStart="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginTop="15dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/trash_to_points"
        android:layout_width="351dp"
        android:layout_height="62dp"
        android:layout_marginTop="65dp"
        android:backgroundTint="@color/orange"
        android:text="Müll in Punkte umwandeln" />

    <ImageButton
        android:id="@+id/button_back"
        android:layout_gravity="start"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/lightgreen"
        android:scaleType="fitCenter"
        android:src="@drawable/back"
        android:padding="10dp" />

</LinearLayout>

</ScrollView>