<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Navigator"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/background"
        android:gravity="center"
        android:padding="0dp">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical"
            android:background="@color/darkgreen"
            android:gravity="center"
            android:padding="0dp">

            <ImageView
                android:id="@+id/dark_logo"
                android:layout_width="325dp"
                android:layout_height="293dp"
                android:src="@drawable/logo_dark" />

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text=""
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/white" />

        </LinearLayout>



        <TextView
            android:id="@+id/textTitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/navigator_headline_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/navigator_headline_2"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/navigator_text_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/navigator_text_2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start">

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/navigator_text_3"
                android:paddingLeft="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginTop="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <ImageView
                android:id="@+id/beer_icon"
                android:layout_width="53dp"
                android:layout_height="56dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/beer" />

            <Button
                android:id="@+id/check_reward"
                android:layout_width="290dp"
                android:layout_height="62dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/red"
                android:text="Belohnung prüfen" />

        </LinearLayout>

        <Button
            android:id="@+id/button_first_station"
            android:layout_width="351dp"
            android:layout_height="62dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/orange"
            android:text="Erste Station: Waldeck" />

        <Button
            android:id="@+id/button_second_station"
            android:layout_width="351dp"
            android:layout_height="62dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/darkgreen"
            android:text="Zweite Station: Escheck" />

        <Button
            android:id="@+id/button_third_station"
            android:layout_width="351dp"
            android:layout_height="62dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/orange"
            android:text="Dritte Station: Hexenloch" />

        <Button
            android:id="@+id/button_fourth_station"
            android:layout_width="351dp"
            android:layout_height="62dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/darkgreen"
            android:text="Vierte Station: Nußbach" />

        <Button
            android:id="@+id/button_fith_station"
            android:layout_width="351dp"
            android:layout_height="62dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/orange"
            android:text="Fünfte Station: Furtwangen" />

        <ImageView
            android:id="@+id/map"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/map" />

    </LinearLayout>
</ScrollView>